# IA-Mosqueteros

./: README.md
AI/: grafo.h  main.cpp
Agente-viajero-algoritmo-genetico/: README.md  package-lock.json  package.json
Agente-viajero-algoritmo-genetico/src/: App.css  App.js  MapChart.component.jsx  MapChartSolution.component.jsx  chart.component.jsx  utils.js
DeepLearnMinstDB/: Mnist_DataBase.ipynb
DeepLearningMnistDB/: DeepLearning_MnistDB.ipynb
a-star/a-star-py/: distance.py  grid.py  vars.py
damas/: CMakeLists.txt  README.md
damas/src/: main.cpp
perceptron/: CMakeLists.txt  README.md  training_data.txt
perceptron/src/: main  main.cpp
tarea-busquedas/: CMakeLists.txt  README.md  main.cpp
tarea-busquedas/a-star-py/: a_star.py
